# xplagiax_genuine

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.multinode.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  wsgi.py
app/: bootstrap.py
app/api/: app_factory.py  dependencies.py  error_handlers.py  schemas.py
app/api/routes/: documents.py  health.py  index.py  jobs.py  search.py
app/application/ranking/: plagiarism_scorer.py  reranker.py
app/application/search/: candidate_filter.py  result_aggregator.py  search_pipeline.py
app/config/: app_settings.py  settings.py
app/domain/entities/: chunk.py  document.py  document_status.py  job.py
app/domain/ports/: chunk_repository.py  document_parser.py  document_repository.py  embedding_model.py  job_queue.py  language_detector.py  search_result_cache.py  token_counter.py  topic_classifier.py  (+1 more)
app/utils/: vector_math.py
app/workers/: indexer_worker.py
cambios/: LEEME.txt  commits.txt  xplagiax-cambios.bundle
cambios/files/: .env.example  .gitignore  Makefile  pyproject.toml
cambios/patches/: 0001-feat-add-caveman-skill-for-ultra-compressed-communic.patch  0002-feat-plain-text-indexing-country-metadata-document-C.patch  0003-feat-resource-diet-profile-ONNX-backend-preload-guni.patch  0004-feat-async-jobs-over-Redis-Streams-single-writer-ind.patch  0005-feat-multi-node-deployment-nginx-LB-scalable-web-rep.patch
docs/: ARCHITECTURE.md  DOMAIN_MODEL.md  RESEARCH.md
tests/integration/: inmemory.py  test_search_api.py
tests/unit/: test_vector_math.py
(+111 files in other folders)
