[project]
name = "xplagiax"
version = "0.1.0"
description = "Plataforma de deteccion de plagio semantico basada en TurboVec"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "gunicorn>=22.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "markitdown>=0.0.1a3",
    "httpx>=0.27",
    "lxml>=5.2",
    "pypdf>=4.2",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "turbovec>=0.1",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "langdetect>=1.0.9",
    "datasketch>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
